add_executable(fileutil_test FileUtil_test.cc)
target_link_libraries(fileutil_test myserver_base)
add_test(NAME fileutil_test COMMAND fileutil_test)

add_executable(logfile_test LogFile_test.cc)
target_link_libraries(logfile_test myserver_base)

add_executable(logging_test Logging_test.cc)
target_link_libraries(logging_test myserver_base)

add_executable(logstream_bench LogStream_bench.cc)
target_link_libraries(logstream_bench myserver_base)

add_executable(logstream_test LogStream_test.cc)
target_link_libraries(logstream_test myserver_base boost_unit_test_framework)
add_test(NAME logstream_test COMMAND logstream_test)

add_executable(timestamp_unittest Timestamp_unittest.cc)
target_link_libraries(timestamp_unittest myserver_base)
add_test(NAME timestamp_unittest COMMAND timestamp_unittest)